--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 
 </head>
 <body>
-  <div id="container">
-    <div id="main">
+  <article id="container">
+    <main>
       <img src="images/image-qr-code.png" alt="A QR code">
     
-      <p class="text head">Improve your front-end skills by building projects</p>
+      <h1>Improve your front-end skills by building projects</h1>
       <p class="text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-    </div>
+    </main>
     
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="https://github.com/aljersulit" target="_blank">Aldrin Sulit</a>.
     </div>
-  </div>
+  </article>
 </body>
 </html>
