--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 
 </head>
 <body>
-  <article id="container">
-    <main>
+  <main id="container">
+    <article>
       <img src="images/image-qr-code.png" alt="A QR code">
     
       <h1>Improve your front-end skills by building projects</h1>
       <p class="text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-    </main>
+    </article>
     
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="https://github.com/aljersulit" target="_blank">Aldrin Sulit</a>.
     </div>
-  </article>
+  </main>
 </body>
 </html>
